...
            Personal details
          </Text>
        </View>

        <DetailItem
          iconName="user"
          title="Personal information"
          subtitle={displayName || "Manage your personal information"}
          onPress={() => navigation.navigate("PersonalInformation")}
        />
        <DetailItem
          iconName="mail"
          title="Email address"
...
