...
              outputRange: [0, 1],
              extrapolate: "clamp"
            })
          }]}
        >
          <Text style={[Typography.h3, styles.headerTitle]}>
            {step === "input" ? "Change phone" : "Verify phone"}
          </Text>
        </Animated.View>
        <View style={{ width: 40 }} />
      </Animated.View>

      <KeyboardAvoidingView
...
